--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   padding: 18px 50px;
   border-radius: 50px;
   border: none;
-  background: light red;
+  background: red;
   color: white;
   cursor: pointer;
   box-shadow: 0px 6px 15px rgba(0,0,0,0.3);
