--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   border-radius: 50px;
   border: none;
   background: red;
-  color: red;
+  color: white;
   cursor: pointer;
   box-shadow: 0px 6px 15px rgba(0,0,0,0.3);
   transition: 0.3s;
